Fixed overflow

--- a/src/module/dashboard/Home.module.css
+++ b/src/module/dashboard/Home.module.css
@@ -7,6 +7,14 @@
     margin: 20px 0px
 }
 
+.flex {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    margin: auto;
+    text-align: center;
+}
+
 .home {
     width: 100%;
     box-sizing: content-box;
@@ -52,7 +60,7 @@
     height: 150px;
     text-align: center;
     padding: 5px;
-    max-width: 300px !important;
+    max-width: 350px !important;
 }
 
 .skillsCard2 {
@@ -61,7 +69,7 @@
     height: 150px;
     text-align: center;
     padding: 5px;
-    max-width: 300px !important;
+    max-width: 350px !important;
 }
 
 .skillsCard3 {
@@ -70,7 +78,7 @@
     height: 150px;
     padding: 5px;
     text-align: center;
-    max-width: 300px !important;
+    max-width: 350px !important;
 }
 
 .skillsCard4 {
@@ -79,7 +87,7 @@
     height: 150px;
     text-align: center;
     padding: 5px;
-    max-width: 300px !important;
+    max-width: 350px !important;
 }
 
 .aboutYellowCard {
@@ -264,7 +272,6 @@
     text-align: center;
     max-width: 350px;
     box-sizing: border-box;
-    margin: 10px;
 }
 
 .contactIcon {
@@ -313,7 +320,7 @@
 .skillsCard {
     box-shadow: 1px 1px 37px -15px rgba(0, 0, 0, 0.63) !important;
     height: 150px;
-    max-width: 400px !important;
+    max-width: 350px !important;
     padding: 20px;
     text-align: center !important;
 }
@@ -328,6 +335,15 @@
     width: 95%;
 }
 
+.education {
+    font-size: 1.5vw;
+}
+
+.card {
+    margin: 10px !important;
+    max-width: 350px;
+}
+
 @media only screen and (max-width:768px) {
     .list {
         width: 90%;
@@ -337,8 +353,12 @@
         font-size: 3vw;
     }
 
-    .contact {
-        margin: 0 !important;
+    .education {
+        font-size: 3vw;
+    }
+
+    .card {
+        margin: 10px 0 !important;
     }
 }
 
@@ -357,5 +377,9 @@
 
     .contactDetail {
         font-size: 3.5vw !important;
+    }
+
+    .education {
+        font-size: 4vw !important;
     }
 }
